Fixed header alignment of lights again.

--- a/app/themes/tekyla/stylesheets/leaflet.scss
+++ b/app/themes/tekyla/stylesheets/leaflet.scss
@@ -455,8 +455,12 @@
     background: white;
     border: none;
     .leaflet-popup-content {
-      .popup-header .lights {
-        float: right;
+      .popup-header {
+        .popup-block-content{
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+        }
       }
       .popup-content, .popup-header, .popup-footer {
         padding: $default-gap 2*$default-gap;
